// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages defineTimeRestrictions should render correctly when no errors are passed 1`] = `
<Component
  description="Define Time Restrictions page of the Create Fares Data Service"
  errors={Array []}
  title="Define Time Restrictions - Create Fares Data Service"
>
  <CsrfForm
    action="/api/defineTimeRestrictions"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div>
      <h1
        className="govuk-heading-l"
        id="define-time-restrictions-page-heading"
      >
        Are there time restrictions on your ticket?
      </h1>
      <span
        className="govuk-hint"
        id="define-time-restrictions-hint"
      >
        We need to know if your ticket(s) will have any time restrictions, for example select yes if your ticket(s) can only be used on a certain day or during a certain time period
      </span>
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": "Is this ticket only valid on certain days or times?",
              "hidden": true,
              "id": "define-valid-days",
            },
            "radioError": Array [],
            "radios": Array [
              Object {
                "dataAriaControls": "valid-days-required-conditional",
                "id": "valid-days-required",
                "inputErrors": Array [],
                "inputHint": Object {
                  "content": "Select the days of the week the ticket is valid for",
                  "id": "define-valid-days-inputHint",
                },
                "inputType": "checkbox",
                "inputs": Array [
                  Object {
                    "id": "monday",
                    "label": "Monday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "tuesday",
                    "label": "Tuesday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "wednesday",
                    "label": "Wednesday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "thursday",
                    "label": "Thursday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "friday",
                    "label": "Friday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "saturday",
                    "label": "Saturday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "sunday",
                    "label": "Sunday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "bankHoliday",
                    "label": "Bank holiday",
                    "name": "validDays",
                  },
                ],
                "label": "Yes",
                "name": "validDaysSelected",
                "value": "Yes",
              },
              Object {
                "id": "valid-days-not-required",
                "label": "No",
                "name": "validDaysSelected",
                "value": "No",
              },
            ],
          }
        }
        key="define-valid-days"
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages defineTimeRestrictions should render errors correctly when both radio and input errors are passed to the page 1`] = `
<Component
  description="Define Time Restrictions page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Choose one of the options below",
        "id": "valid-days-required",
      },
      Object {
        "errorMessage": "Enter a start time in a valid 24 hour format between 0000 - 2300",
        "id": "start-time",
      },
      Object {
        "errorMessage": "Enter an end time in a valid 24 hour format between 0000 - 2300",
        "id": "end-time",
      },
    ]
  }
  title="Define Time Restrictions - Create Fares Data Service"
>
  <CsrfForm
    action="/api/defineTimeRestrictions"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose one of the options below",
            "id": "valid-days-required",
          },
          Object {
            "errorMessage": "Enter a start time in a valid 24 hour format between 0000 - 2300",
            "id": "start-time",
          },
          Object {
            "errorMessage": "Enter an end time in a valid 24 hour format between 0000 - 2300",
            "id": "end-time",
          },
        ]
      }
    />
    <div>
      <h1
        className="govuk-heading-l"
        id="define-time-restrictions-page-heading"
      >
        Are there time restrictions on your ticket?
      </h1>
      <span
        className="govuk-hint"
        id="define-time-restrictions-hint"
      >
        We need to know if your ticket(s) will have any time restrictions, for example select yes if your ticket(s) can only be used on a certain day or during a certain time period
      </span>
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": "Is this ticket only valid on certain days or times?",
              "hidden": true,
              "id": "define-valid-days",
            },
            "radioError": Array [
              Object {
                "errorMessage": "Choose one of the options below",
                "id": "valid-days-required",
              },
            ],
            "radios": Array [
              Object {
                "dataAriaControls": "valid-days-required-conditional",
                "id": "valid-days-required",
                "inputErrors": Array [],
                "inputHint": Object {
                  "content": "Select the days of the week the ticket is valid for",
                  "id": "define-valid-days-inputHint",
                },
                "inputType": "checkbox",
                "inputs": Array [
                  Object {
                    "id": "monday",
                    "label": "Monday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "tuesday",
                    "label": "Tuesday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "wednesday",
                    "label": "Wednesday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "thursday",
                    "label": "Thursday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "friday",
                    "label": "Friday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "saturday",
                    "label": "Saturday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "sunday",
                    "label": "Sunday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "bankHoliday",
                    "label": "Bank holiday",
                    "name": "validDays",
                  },
                ],
                "label": "Yes",
                "name": "validDaysSelected",
                "value": "Yes",
              },
              Object {
                "id": "valid-days-not-required",
                "label": "No",
                "name": "validDaysSelected",
                "value": "No",
              },
            ],
          }
        }
        key="define-valid-days"
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages defineTimeRestrictions should render errors correctly when input errors are passed to the page 1`] = `
<Component
  description="Define Time Restrictions page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a start time in a valid 24 hour format between 0000 - 2300",
        "id": "start-time",
      },
      Object {
        "errorMessage": "Enter an end time in a valid 24 hour format between 0000 - 2300",
        "id": "end-time",
      },
      Object {
        "errorMessage": "Select at least one day",
        "id": "monday",
      },
    ]
  }
  title="Define Time Restrictions - Create Fares Data Service"
>
  <CsrfForm
    action="/api/defineTimeRestrictions"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a start time in a valid 24 hour format between 0000 - 2300",
            "id": "start-time",
          },
          Object {
            "errorMessage": "Enter an end time in a valid 24 hour format between 0000 - 2300",
            "id": "end-time",
          },
          Object {
            "errorMessage": "Select at least one day",
            "id": "monday",
          },
        ]
      }
    />
    <div>
      <h1
        className="govuk-heading-l"
        id="define-time-restrictions-page-heading"
      >
        Are there time restrictions on your ticket?
      </h1>
      <span
        className="govuk-hint"
        id="define-time-restrictions-hint"
      >
        We need to know if your ticket(s) will have any time restrictions, for example select yes if your ticket(s) can only be used on a certain day or during a certain time period
      </span>
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": "Is this ticket only valid on certain days or times?",
              "hidden": true,
              "id": "define-valid-days",
            },
            "radioError": Array [],
            "radios": Array [
              Object {
                "dataAriaControls": "valid-days-required-conditional",
                "id": "valid-days-required",
                "inputErrors": Array [
                  Object {
                    "errorMessage": "Select at least one day",
                    "id": "monday",
                  },
                ],
                "inputHint": Object {
                  "content": "Select the days of the week the ticket is valid for",
                  "id": "define-valid-days-inputHint",
                },
                "inputType": "checkbox",
                "inputs": Array [
                  Object {
                    "id": "monday",
                    "label": "Monday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "tuesday",
                    "label": "Tuesday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "wednesday",
                    "label": "Wednesday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "thursday",
                    "label": "Thursday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "friday",
                    "label": "Friday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "saturday",
                    "label": "Saturday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "sunday",
                    "label": "Sunday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "bankHoliday",
                    "label": "Bank holiday",
                    "name": "validDays",
                  },
                ],
                "label": "Yes",
                "name": "validDaysSelected",
                "value": "Yes",
              },
              Object {
                "id": "valid-days-not-required",
                "label": "No",
                "name": "validDaysSelected",
                "value": "No",
              },
            ],
          }
        }
        key="define-valid-days"
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages defineTimeRestrictions should render errors correctly when radio errors are passed to the page 1`] = `
<Component
  description="Define Time Restrictions page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Choose one of the options below",
        "id": "valid-days-required",
      },
    ]
  }
  title="Define Time Restrictions - Create Fares Data Service"
>
  <CsrfForm
    action="/api/defineTimeRestrictions"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose one of the options below",
            "id": "valid-days-required",
          },
        ]
      }
    />
    <div>
      <h1
        className="govuk-heading-l"
        id="define-time-restrictions-page-heading"
      >
        Are there time restrictions on your ticket?
      </h1>
      <span
        className="govuk-hint"
        id="define-time-restrictions-hint"
      >
        We need to know if your ticket(s) will have any time restrictions, for example select yes if your ticket(s) can only be used on a certain day or during a certain time period
      </span>
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": "Is this ticket only valid on certain days or times?",
              "hidden": true,
              "id": "define-valid-days",
            },
            "radioError": Array [
              Object {
                "errorMessage": "Choose one of the options below",
                "id": "valid-days-required",
              },
            ],
            "radios": Array [
              Object {
                "dataAriaControls": "valid-days-required-conditional",
                "id": "valid-days-required",
                "inputErrors": Array [],
                "inputHint": Object {
                  "content": "Select the days of the week the ticket is valid for",
                  "id": "define-valid-days-inputHint",
                },
                "inputType": "checkbox",
                "inputs": Array [
                  Object {
                    "id": "monday",
                    "label": "Monday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "tuesday",
                    "label": "Tuesday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "wednesday",
                    "label": "Wednesday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "thursday",
                    "label": "Thursday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "friday",
                    "label": "Friday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "saturday",
                    "label": "Saturday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "sunday",
                    "label": "Sunday",
                    "name": "validDays",
                  },
                  Object {
                    "id": "bankHoliday",
                    "label": "Bank holiday",
                    "name": "validDays",
                  },
                ],
                "label": "Yes",
                "name": "validDaysSelected",
                "value": "Yes",
              },
              Object {
                "id": "valid-days-not-required",
                "label": "No",
                "name": "validDaysSelected",
                "value": "No",
              },
            ],
          }
        }
        key="define-valid-days"
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
